--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -18,11 +18,4 @@ jobs:
 
       - name: Check for Copyright
         run: |
-          find . -name '*.rs' | while read file; do
-            if ! cmp -s <(head -n 5 "$file") copyright.txt; then
-              echo cmp -s <(head -n 5 "$file")
-              echo copyright.txt
-              echo "Missing or incorrect copyright in $file"
-              exit 1
-            fi
-          done
+          find . -name '*.rs' -not -path "./runtime/*" -exec bash -c 'if ! cmp -s <(head -n 5 "{}") copyright.txt; then echo "Missing or incorrect copyright in {}"; exit 1; fi' \;
