--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -19,11 +19,12 @@ jobs:
       - name: Check for Copyright
         run: |
           find . -name '*.rs' -not -path "./runtime/*" -exec bash -c '
-            while IFS= read -r file; do
+            for file do
                 if ! head -n 4 "$file" | grep -qFf "copyright.txt"; then
-                  echo "Missing or incorrect copyright in $file"
-                  exit 1
+                    echo "Missing or incorrect copyright in $file"
+                    exit 1
                 fi
             done
-          ' {} +
+          ' bash {} +
+    
     
