--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           find . -name '*.rs' -not -path "./runtime/*" -exec bash -c '
             for file do
-                if ! sed -n '1,4p' "$file" | grep -qFf "copyright.txt"; then
+                if grep -qFf "copyright.txt" "$file"; then
                     echo "Missing or incorrect copyright in $file"
                     exit 1
                 fi
