--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           find . -name '*.rs' -not -path "./runtime/*" -exec bash -c '
             for file do
-                if grep -F -x -f "copyright.txt" "$file"; then
+                if ! grep -F -x -f "copyright.txt" "$file"; then
                     echo "Missing or incorrect copyright in $file"
                     exit 1
                 fi
