--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -12,15 +12,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Check for Copyright
-        run: |
-          find . -name '*.rs' -not -path "./runtime/*" -exec bash -c '
-            for file do
-                if ! grep -F -x -f "copyright.txt" "$file"; then
-                    echo "Missing or incorrect copyright in $file"
-                    exit 1
-                fi
-            done
-          ' bash {} +
+      - name: Copyright Comment Check
+        uses: tusharojha/copyright-check-action
+        with: 
+          path: './'
+          exclude: 'runtime'
+
+      
     
     
