fixed runtime path

--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -16,7 +16,7 @@ jobs:
         uses: tusharojha/copyright-check-action@master
         with: 
           path: './**/*.rs'
-          exclude: 'runtime'
+          exclude: './runtime'
           copyrightPath: 'copyright.txt'
 
       
